src/test/compile-fail/import4.rs
// error-pattern: cyclic import

import zed::bar;
import bar::zed;

fn main(args: [str]) { log "loop"; }